[project]
name = "autoctp"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --strict-markers"
markers = [
    "unit: 不依赖 autotrade / autostraggle，CI unit job 必跑",
    "integration: 需要 autotrade / autostraggle 源码（本地或 CI full job）",
    "autostraggle: 需要 autostraggle 源码仓库（CI 未配 AUTOSTRAGGLE_REPO_URL 时跳过）",
]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 15

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["data", ".pytest_cache", "__pycache__"]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82", "F401", "F841"]
